# rivals-scraper

./: Cargo.toml
src/: db.rs  lib.rs  main.rs
src/scraper/: heroes.rs  mod.rs  scraper.rs
tests/: scraper_tests.rs
