[package]
name = "rivals-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
reqwest = "0.13.2"
scraper = "0.25.0"
serde = "1.0.228"
sqlx = { version = "0.8.6",  features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }
tokio = { version = "1.49.0", features = ["full"] }
